fix overflow in ArticleDetailsPage.module.scss

--- a/src/pages/ArticleDetailPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -5,6 +5,5 @@
 .recommendations {
   margin-top: 20px;
   flex-wrap: nowrap !important;
-  overflow-y: hidden;
-  overflow-x: auto;
+  overflow: auto hidden;
 }
